unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/Integration_Inbound_Payload__mdt.object-meta.xml
<CustomObject>
    <label>Integration Inbound Payload</label>
    <pluralLabel>Integration Inbound Payloads</pluralLabel>
</CustomObject>