unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <referenceTo>Integration__mdt</referenceTo>
    <relationshipLabel>Integration Inbound Payloads</relationshipLabel>
    <relationshipName>Integration_Inbound_Payloads</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>