unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/JSON_Key__c.field-meta.xml
<CustomField>
    <fullName>JSON_Key__c</fullName>
    <label>JSON Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>