unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/JSON_Parent__c.field-meta.xml
<CustomField>
    <fullName>JSON_Parent__c</fullName>
    <label>JSON Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>