unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/JSON_Type__c.field-meta.xml
<CustomField>
    <fullName>JSON_Type__c</fullName>
    <label>JSON Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>