unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integration_Inbound_Payloads</relationshipLabel>
    <relationshipName>Integration_Inbound_Payloads</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>