unpackaged/main/default/objects/Integration_Inbound_Payload__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <metadataRelationshipControllingField>Integration_Inbound_Payload__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Integration_Inbound_Payloads</relationshipLabel>
    <relationshipName>Integration_Inbound_Payloads</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>